# energy

./: .flake8  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml
src/energy/consumption/: admin.py  apps.py  models.py  models_factory.py
src/energy/consumption/migrations/: 0001_initial.py  0002_rename_energyquantile_energyconsumptionrecord.py  0003_alter_energyconsumptionrecord_value.py
src/energy/consumption/services/BillPrinter/: base_printer.py  plain_text_printer.py
src/energy/core/: asgi.py  settings.py  test_settings.py  wsgi.py
src/energy/customers/: admin.py  apps.py  models.py  models_factory.py
src/energy/customers/management/commands/: demo_data.py
src/energy/customers/migrations/: 0001_initial.py  0002_customer_demo_bill_from_customer_demo_bill_to.py  0003_customer_time_zone.py
src/energy/customers/tests/utils/: create_blue_customer.py  create_green_customer.py
src/energy/suppliers/: admin.py  apps.py  models.py  models_factory.py
src/energy/suppliers/migrations/: 0001_initial.py
src/energy/suppliers/tests/utils/: create_blue_supplier.py  create_green_supplier.py
src/energy/tariffs/: admin.py  apps.py  models.py  models_factory.py
src/energy/tariffs/migrations/: 0001_initial.py
src/energy/tariffs/schema/: types.py
src/energy/tariffs/schema/activation_condition/: base.py  factory.py
src/energy/tariffs/schema/activation_condition/implementations/: consumed_value.py  date.py  time.py  weekday.py
src/energy/tariffs/services/ConsumptionCalculator/: Calculator.py  schema.py
src/energy/tariffs/services/TariffMatcher/: TariffMatcher.py
src/energy/tariffs/tests/: test_total_calculations.py
src/energy/tests/: BaseEnergyTest.py
src/energy/tests/factory/: UserFactory.py
src/energy/utils/: enum_to_choises.py  exclude_gst.py  power_converters.py
